@@ -13,7 +13,7 @@
 <div class="banlist">
 <div class="notice">
   <%= @flash[:note2] %>
-
+  <br>
   pattern:<%=h @flash[:pattern] %> /
   teststring:<%=h @flash[:teststring] %> /
   format:<%=h @flash[:format] %>
